# RAG

./: .dockerignore  .env.example  .env.exemple  .gitignore  CHANGES_SINCE_LAST_COMMIT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  LICENSE  Makefile  PROJET.md  Procfile  README.md  SECURITY.md  STATUS.md  TO_FIX.md  docker-compose.yml  locustfile.py  main.py  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  supabase_schema.sql  walkthrough.md.resolved
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
Schéma/: architecture-lorekeeper(6).drawio  architecture-lorekeeper(9).drawio  architecture-lorekeeper.drawio  features-schemas.md
data/sample/: Ediz.txt  Lore-Emir.txt  Lore-Lucas.txt  arbre_competences_joueur.csv  artefacts.txt  artefacts_legendaires.xml  base_prospects_v2.xlsx  budget_previsionnel_annuel_2024.xlsx  cars.txt  chroniques_guerre_ancienne.md  contrat_prestation_cloud_gold.docx  contrat_service_b2b.md  dialogues_transcrits.txt  emir.txt  evenements.md  factions.md  (+20 more)
docs/: DOCUMENTATION.md  EXAM_REVIEW.md  PRESENTATION_CANVAS.md  architecture-complete.mmd  architecture.md  docs.html  supabase_schema.sql
frontend/: RABELIA - Canvas.html  RABELIA - Prototype.html  design-canvas.jsx  package-lock.json  package.json  primitives.jsx  screen-chat.jsx  screen-settings.jsx  screens-login-upload.jsx  tokens.css  tweaks-panel.jsx  vite.config.js
nvfront/: index.html  package-lock.json  screen-settings.jsx  screens-login-upload.jsx
scripts/: benchmark_rag_api.py  start.sh
src/: main.py  mcp_server.py  utils.py
(+168 files in other folders)
