[project]
name = "oracle-lorekeeper-mcp"
version = "0.1.0"
description = "Serveur MCP exposant le RAG d'Aethelgard Online (Oracle LoreKeeper)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.26.0,<2",
    "python-dotenv>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-qdrant>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.7.0",
    "fastembed>=0.2.0",
    "pydantic>=2.0.0",
]

[project.scripts]
oracle-lorekeeper-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "mcp_server.py",
    "src/",
]
