[project]
name = "rabelia-rag"
version = "0.1.0"
description = "RABELIA — RAG Belgique IA, moteur documentaire B2B de grade production"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.26.0,<2",
    "python-dotenv>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-qdrant>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.7.0",
    "fastembed>=0.2.0",
    "pydantic>=2.0.0",
    "python-docx>=1.1.0",
]

[project.scripts]
rabelia-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "mcp_server.py",
    "src/",
]
